tests/ui/macros/syntax-error-recovery.stderr
error: expected one of `(`, `,`, `=`, `{`, or `}`, found `(String)`
  --> $DIR/syntax-error-recovery.rs:7:26
   |
LL | / macro_rules! values {
LL | |     ($($token:ident($value:literal) $(as $inner:ty)? => $attr:meta,)*) => {
LL | |         #[derive(Debug)]
LL | |         pub enum TokenKind {
...  |
LL | |                 $token $($inner)? = $value,
   | |                          ^^^^^^ expected one of `(`, `,`, `=`, `{`, or `}`
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `values!`
...
LL |   values!(STRING(1) as (String) => cfg(test),);
   |   -------------------------------------------- in this macro invocation
   |
   = help: enum variants can be `Variant`, `Variant = <integer>`, `Variant(Type, ..., TypeN)` or `Variant { fields: Types }`

error: macro expansion ignores token `(String)` and any following
  --> $DIR/syntax-error-recovery.rs:7:26
   |
LL |                 $token $($inner)? = $value,
   |                          ^^^^^^
...
LL | values!(STRING(1) as (String) => cfg(test),);
   | -------------------------------------------- caused by the macro expansion here
   |
   = note: the usage of `values!` is likely invalid in item context

error: expected one of `!` or `::`, found `<eof>`
  --> $DIR/syntax-error-recovery.rs:15:9
   |
LL | values!(STRING(1) as (String) => cfg(test),);
   |         ^^^^^^ expected one of `!` or `::`

error: aborting due to 3 previous errors

